--- a/arangodb.bib
+++ b/arangodb.bib
@@ -1,26 +1,11 @@
-@misc{ArangoDeprecated,
-title = {{Deprecated Features | ArangoDB Documentation}},
-url = {https://www.arangodb.com/docs/stable/appendix-deprecated.html},
-urldate = {2020-04-10}
+@misc{ShortestPath,
+title = {{Shortest Path | Graphs | AQL | ArangoDB Documentation}},
+url = {https://www.arangodb.com/docs/stable/aql/graphs-shortest-path.html},
+urldate = {2020-04-11}
 }
-@misc{MMvsRocks,
-title = {{ArangoDB Storage Engines | ArangoDB Documentation}},
-url = {https://www.arangodb.com/docs/stable/architecture-storage-engines.html},
-urldate = {2020-04-10}
-}
-@misc{GeoTut,
-title = {{Geospatial queries | Tutorial | AQL | ArangoDB Documentation}},
-url = {https://www.arangodb.com/docs/stable/aql/tutorial-geospatial.html},
-urldate = {2020-04-10}
-}
-@misc{GeoFunc,
-title = {{Geo | Functions | AQL | ArangoDB Documentation}},
-url = {https://www.arangodb.com/docs/stable/aql/functions-geo.html{\#}geo-functions},
-urldate = {2020-04-10}
-}
-@misc{GeoJSON,
-title = {{Geo-spatial Indexes | Working with Indexes | Indexing | Manual | ArangoDB Documentation}},
-url = {https://www.arangodb.com/docs/stable/indexing-geo.html{\#}geojson},
+@misc{ArangoSearchTut,
+title = {{ArangoSearch Tutorial - ArangoDB}},
+url = {https://www.arangodb.com/arangodb-training-center/search/arangosearch/},
 urldate = {2020-04-10}
 }
 @misc{FulltextFunc,
@@ -33,8 +18,28 @@ title = {{Fulltext Indexes | Working with Indexes | Indexing | Manual | ArangoDB
 url = {https://www.arangodb.com/docs/stable/indexing-fulltext.html},
 urldate = {2020-04-10}
 }
-@misc{ArangoSearchTut,
-title = {{ArangoSearch Tutorial - ArangoDB}},
-url = {https://www.arangodb.com/arangodb-training-center/search/arangosearch/},
+@misc{GeoJSON,
+title = {{Geo-spatial Indexes | Working with Indexes | Indexing | Manual | ArangoDB Documentation}},
+url = {https://www.arangodb.com/docs/stable/indexing-geo.html{\#}geojson},
+urldate = {2020-04-10}
+}
+@misc{GeoFunc,
+title = {{Geo | Functions | AQL | ArangoDB Documentation}},
+url = {https://www.arangodb.com/docs/stable/aql/functions-geo.html{\#}geo-functions},
+urldate = {2020-04-10}
+}
+@misc{GeoTut,
+title = {{Geospatial queries | Tutorial | AQL | ArangoDB Documentation}},
+url = {https://www.arangodb.com/docs/stable/aql/tutorial-geospatial.html},
+urldate = {2020-04-10}
+}
+@misc{MMvsRocks,
+title = {{ArangoDB Storage Engines | ArangoDB Documentation}},
+url = {https://www.arangodb.com/docs/stable/architecture-storage-engines.html},
+urldate = {2020-04-10}
+}
+@misc{ArangoDeprecated,
+title = {{Deprecated Features | ArangoDB Documentation}},
+url = {https://www.arangodb.com/docs/stable/appendix-deprecated.html},
 urldate = {2020-04-10}
 }
