Don't makeindex, remove unnecessary packages

--- a/main.tex
+++ b/main.tex
@@ -4,22 +4,17 @@
 	DIV = 14
 ]{scrartcl}
 
-\usepackage{polyglossia}
-\usepackage{csquotes}
-\setmainlanguage{english}
+\usepackage{hyperref}
 
-\usepackage{parskip}
+% references:
 \usepackage[backend = biber]{biblatex}
-\usepackage{graphicx}
-\usepackage[version=4]{mhchem}
 
 % abbreviations:
-\usepackage[acronym,nonumberlist]{glossaries}
+\usepackage[acronym]{glossaries}
 
 % code snippets:
 \usepackage{listings}
 \usepackage[dvipsnames]{xcolor}
-
 \definecolor{ListingBackground}{HTML}{F8F8F8}
 \lstset{
   basicstyle=\ttfamily\footnotesize,
@@ -34,7 +29,6 @@
   xleftmargin=10pt,		        % margin left
   xrightmargin=5pt,		        % margin right
 }
-
 \definecolor{ArangoKeywordColor}{HTML}{0600ff}
 \definecolor{ArangoFuncColor}{HTML}{3c4b72}
 \definecolor{ArangoStringColor}{HTML}{036a06}
@@ -51,34 +45,9 @@
   numberstyle=\color{ArangoNumberColor},
 }
 
-%\lstset{%
-%    language={},			% default language
-%    breaklines=true,		        % break lines if necessary (true, false)
-%    breakautoindent=true,	        % indenting after break line (true, false)
-%    postbreak=\space,		% break line after space
-%    tabsize=2,				% tabulator size
-%    basicstyle=\ttfamily\footnotesize, % font style
-%    showspaces=false,		% show space (true, false)		
-%    showstringspaces=false,	% show space in strings (true, false)
-%    extendedchars=true,		% show all Latin1 characters (true, false)
-%    captionpos=b,			% sets the caption-position to bottom
-%    backgroundcolor=\color{ListingBackground}, % source code background
-%    %xleftmargin=10pt,		        % margin left
-%    %xrightmargin=5pt,		        % margin right
-%    frame=single,			        % border settings
-%    frameround=ffff,
-%    rulecolor=\color{darkgray} % border color
-%    fillcolor=\color{ListingBackground},
-%    aboveskip=20pt,
-%    keywordstyle=\color[rgb]{0.133,0.133,0.6},
-%    commentstyle=\color[rgb]{0.133,0.545,0.133},
-%    stringstyle=\color[rgb]{0.627,0.126,0.941},
-%}
 
 \makenoidxglossaries{}
-
 \input{acros.tex}
-
 \bibliography{arangodb.bib} 
 
 \title{ArangoDB}
