--- a/arangodb.bib
+++ b/arangodb.bib
@@ -43,3 +43,14 @@ title = {{Deprecated Features | ArangoDB Documentation}},
 url = {https://www.arangodb.com/docs/stable/appendix-deprecated.html},
 urldate = {2020-04-10}
 }
+
+@misc{ArangoHomepage,
+title = {{Why ArangoDB | ArangoDB Homepage}},
+url = {https://www.arangodb.com/why-arangodb/},
+urldate = {2020-04-10}
+}
+@misc{ArangoCluster,
+title = {{Cluster Mode | ArangoDB Homepage}},
+url = {https://www.arangodb.com/why-arangodb/cluster/},
+urldate = {2020-04-10}
+}
