--- a/content.tex
+++ b/content.tex
@@ -9,11 +9,29 @@ ArangoDB is an open-source multi model database system developed and maintained 
 
 ArangoDB was first released in 2011 under the name "AvocadoDB". 
 
-[https://www.arangodb.com](https://www.arangodb.com/)]
+\cite{ArangoHomepage}
 
 \section{ArangoDB in distributed systems}
-- CAP Theorem (CP)
-- Consistency over availability
+Often the usage of a database exceeds that capacity of the current server. In such a scenario there are two options: Vertical and Horizontal scaling. Vertical scaling means moving ArangoDB to a more capable server. This might be expensive and is not infinitely feasable as there are certain limits to what a single server can achieve. For that reason it is important to look at horizontal scaling and distributed systems for database management systems. ArangoDB has a cluster mode in which you can link several servers into a cluster of database instances. [https://www.arangodb.com/why-arangodb/cluster/] There are some interesting aspects of ArangoDBs cluster mode that are discussed in the following sections.
+
+\subsection{Data model differences in cluster mode}
+As ArangoDB supports multiple data models there naturally are some differences as to how they behave scaling in a cluster. There are multiple types of nodes in the ArangoDB cluster mode. More information on that can be found in the ArangoDB documentation.
+\medskip
+
+The \textbf{key-value store} data model scales the best as it is implemented as a document store where each document has a primary key for reference. If we split the database just based on the primary key of the documents there are no problems with lookups or updates and the database scales linearly. If we introduce other attributes to the splitting process it will not scale linearly but depends on the selected attributes. Still the key-value data model is the easiest for scaling an ArangoDB database horizontally.
+\medskip
+
+As the key-value store is implemented based on the \textbf{document store}, single document operations scale in the same manner in the document store data model as in the key-value data model - linearly. Things get more complex with document joins supported by AQL. With this when affected documents reside on different machines it might need a lot of communication between the machines. There is a query optimizer which knows certain metadata that improves performance significantly though.
+\medskip
+
+\textbf{Graph data} stored in ArangoDB is the least efficient in scaling as it is often queried in paths of unknown length. Therefor it might also need a lot of communication between machines in the cluster as graph parts might be distributed and not on a single machine. Trying to store related vertices and edges on one node can help improving the performance.
+\cite{ArangoCluster}
+
+\subsection{CAP Theorem}
+The CAP theorem, a theorem of theoretical computer science by Eric Brewer [citation], states that it is impossible to achieve more than two out of these three characteristics in a distributed system: consistency, availability and partition tolerance.
+
+ArangoDB prefers to maintain internal consistency over availability which makes it a CP system regarding the CAP theorem. When you connect to an arbitrary node of the system you experience a view of the database consistent with all other nodes. When the cluster encounters a network partition it prioritizes to keep its consistency. When one machine fails the ArangoDB cluster continues to serve requests.
+\cite{ArangoCluster}
 
 \section{Installation}
 
