--- a/arangodb.bib
+++ b/arangodb.bib
@@ -1,5 +1,6 @@
 @misc{ShortestPath,
-title = {{Shortest Path | Graphs | AQL | ArangoDB Documentation}},
+title = {{Shortest Path | Graphs}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/aql/graphs-shortest-path.html},
 urldate = {2020-04-11}
 }
@@ -9,48 +10,57 @@ url = {https://www.arangodb.com/arangodb-training-center/search/arangosearch/},
 urldate = {2020-04-10}
 }
 @misc{FulltextFunc,
-title = {{Fulltext | Functions | AQL | ArangoDB Documentation}},
+title = {{Fulltext | Functions}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/aql/functions-fulltext.html},
 urldate = {2020-04-10}
 }
 @misc{FulltextIndex,
-title = {{Fulltext Indexes | Working with Indexes | Indexing | Manual | ArangoDB Documentation}},
+title = {{Fulltext Indexes}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/indexing-fulltext.html},
 urldate = {2020-04-10}
 }
 @misc{GeoJSON,
-title = {{Geo-spatial Indexes | Working with Indexes | Indexing | Manual | ArangoDB Documentation}},
+title = {{Geo-spatial Indexes}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/indexing-geo.html{\#}geojson},
 urldate = {2020-04-10}
 }
 @misc{GeoFunc,
-title = {{Geo | Functions | AQL | ArangoDB Documentation}},
+title = {{Geo | Functions}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/aql/functions-geo.html{\#}geo-functions},
 urldate = {2020-04-10}
 }
 @misc{GeoTut,
-title = {{Geospatial queries | Tutorial | AQL | ArangoDB Documentation}},
+title = {{Geospatial queries}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/aql/tutorial-geospatial.html},
 urldate = {2020-04-10}
 }
 @misc{MMvsRocks,
-title = {{ArangoDB Storage Engines | ArangoDB Documentation}},
+title = {{ArangoDB Storage Engines}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/architecture-storage-engines.html},
 urldate = {2020-04-10}
 }
 @misc{ArangoDeprecated,
-title = {{Deprecated Features | ArangoDB Documentation}},
+title = {{Deprecated Features}},
+titleaddon = {ArangoDB Documentation},
 url = {https://www.arangodb.com/docs/stable/appendix-deprecated.html},
 urldate = {2020-04-10}
 }
 
 @misc{ArangoHomepage,
-title = {{Why ArangoDB | ArangoDB Homepage}},
+title = {{Why ArangoDB}},
+titleaddon = {ArangoDB Homepage},
 url = {https://www.arangodb.com/why-arangodb/},
 urldate = {2020-04-10}
 }
 @misc{ArangoCluster,
-title = {{Cluster Mode | ArangoDB Homepage}},
+title = {{Cluster Mode}},
+titleaddon = {ArangoDB Homepage},
 url = {https://www.arangodb.com/why-arangodb/cluster/},
 urldate = {2020-04-10}
 }
