--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 
 % references:
 \usepackage{csquotes}
-\usepackage[style=apa6,sortcites=true,sorting=nyt,backend=biber]{biblatex}
+\usepackage[style=apa6,backend=biber]{biblatex}
 \DeclareLanguageMapping{american}{american-apa}
 \addbibresource{arangodb.bib}
 
@@ -60,7 +60,7 @@
 
 \keywords{ArangoDB, database, multi-model, NoSQL, graph}
 
-\abstract{TBD}
+\abstract{ArangoDB is NoSQL database with a multi-model paradigm. In this paper we will demonstrate its characteristics and features. We will compare it to traditional SQL mechanisms and compare it with other NoSQL databases.}
 
 \begin{document}
 \maketitle
