--- a/arangodb.bib
+++ b/arangodb.bib
@@ -54,3 +54,10 @@ title = {{Cluster Mode | ArangoDB Homepage}},
 url = {https://www.arangodb.com/why-arangodb/cluster/},
 urldate = {2020-04-10}
 }
+
+@article{Brewer2000,
+ author = {Brewer, Eric},
+ title = {Towards robust distributed systems},
+ year = {2000},
+ doi = {10.1145/343477.343502}
+}
